@@ -1,6 +1,7 @@
 package com.example.skripsi.configs;
 
 import com.example.skripsi.securities.*;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
@@ -14,6 +15,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -22,6 +24,9 @@ public class SecurityConfig {
 
     private final JwtFilter jwtFilter;
     private final JwtAuthEntryPoint jwtAuthEntryPoint;
+    
+    @Value("${cors.allowed-origins}")
+    private String corsAllowedOrigins;
 
     public SecurityConfig(JwtFilter jwtFilter,
                           JwtAuthEntryPoint jwtAuthEntryPoint) {
@@ -58,7 +63,8 @@ public class SecurityConfig {
 
         CorsConfiguration config = new CorsConfiguration();
 
-        config.setAllowedOrigins(List.of("http://localhost:8000"));
+        List<String> allowedOrigins = Arrays.asList(corsAllowedOrigins.split(","));
+        config.setAllowedOrigins(allowedOrigins);
 
         config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         config.setAllowedHeaders(List.of("*"));
